fix: spacing

--- a/new-calendar.css
+++ b/new-calendar.css
@@ -292,6 +292,7 @@
 .fc .fc-toolbar-title {
     font-size: 1.75em;
     margin: 0;
+    padding-left: 0.5rem;
     color: #FFF
 }
 
